# arxiv-summarizer

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  init-db.sql  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/: config.py  main.py
src/api/: routes.py
src/database/: connection.py  models.py  repositories.py
src/models/: knowledge_level.py  paper.py
src/processing/: base.py  gemini_summarizer.py  prompts.py  summarizer.py
src/retrieval/: arxiv_retriever.py  base.py  factory.py
src/services/: paper_service.py
tests/unit/api/: test_api_papers.py  test_api_summarize.py  test_routes.py
tests/unit/database/: test_repositories.py
tests/unit/services/: test_paper_service.py
